# py-simple-classproperty

./: README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: release_pypi.yml
simple_classproperty/: __init__.py  classproperty_decorator.py  classproperty_meta.py
tests/: test_classproperty.py
tests/res/: test_classes.py
