[project]
name = "simple-classproperty"
dynamic = [ "version" ]
description = "Provides a 'classproperty' decorator."
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Marc Ammon", email = "marc.ammon@hotmail.de" }
]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/mammo0/py-simple-classproperty"


[tool.pylint.MASTER]
init-hook="import astroid.bases; astroid.bases.POSSIBLE_PROPERTIES.add('classproperty')"


[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
metadata = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
